SpringPetClinic/springpetclinic/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springpetclinic
  labels:
    app: springpetclinic
spec:
  selector:
    matchLabels:
      app: springpetclinic
  revisionHistoryLimit: 5
  replicas: 1
  template:
    metadata:
      name: springpetclinic
      labels:
        app: springpetclinic
    spec:
      containers:
        - name: springpetclinic
          image: docker.io/fureasu346/springpetclinic:3.5.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 10
