SpringPetClinic/springpetclinic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springpetclinic
spec:
  selector:
    app: springpetclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
