SpringPetClinic/springpetclinic/istio-gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: springpetclinic
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "springpetclinic.lab.local"
